@@ -509,9 +509,10 @@ class TextEditor(wx.stc.StyledTextCtrl, Mixin.Mixin, DocumentBase.DocumentBase):
 #       wxSTC_CMD_CLEAR
             ('Del', wx.stc.STC_CMD_CLEAR),
 #       wxSTC_CMD_COPY Copy the selection to the clipboard
-#           ('Ctrl+C', wx.stc.STC_CMD_COPY),
+           ('Ctrl+C', wx.stc.STC_CMD_COPY),
+           ('Ctrl+Insert', wx.stc.STC_CMD_COPY),
 #       wxSTC_CMD_CUT Cut the selection to the clipboard
-#           ('Ctrl+X', wx.stc.STC_CMD_CUT),
+           ('Ctrl+X', wx.stc.STC_CMD_CUT),
            ('Shift+Del', wx.stc.STC_CMD_CUT),
 #       wxSTC_CMD_DELETEBACK Delete the selection or if no selection, the character before the caret
             ('Back', wx.stc.STC_CMD_DELETEBACK),
@@ -573,6 +574,7 @@ class TextEditor(wx.stc.StyledTextCtrl, Mixin.Mixin, DocumentBase.DocumentBase):
             ('Pgup', wx.stc.STC_CMD_PAGEUP),
 #       wxSTC_CMD_PAGEUPEXTEND Move caret one page up extending selection to new caret position
             ('Shift+Pgup', wx.stc.STC_CMD_PAGEUPEXTEND),
+            ('Ctrl+V', wx.stc.STC_CMD_PASTE),
             ('Shift+Ins', wx.stc.STC_CMD_PASTE),
 #       wxSTC_CMD_REDO Redoes the next action on the undo history
 #           ('Ctrl+Y', wx.stc.STC_CMD_REDO),
