@@ -1,4 +1,8 @@
 ﻿$Rev$
+[2007/08/24]
+Editor.py           Add Ctrl+Insret => Copy, and add Ctrl+C, Ctrl+X, Ctrl+Y to
+                    Editor.py I don't if it'll fix the problem in linux
+                    
 [2007/08/23]
 UliPad.py           Now you can set pythonpath option in config.ini/[default], 
                     and ulipad will insert it into the sys.path. pythonpath can 
